--- a/Apelsin_test/index.html
+++ b/Apelsin_test/index.html
@@ -279,11 +279,12 @@
 		}
 
 		/*menu*/
-		/*$('.show').on('click', function() {
+	/*	$('.show').mouseenter(function() {
 			if($('.menu-nav').hasClass('hide')){
 				$('.menu-nav').removeClass('hide');
 				$('.show').addClass('selected');
-			} else {
+			} else 
+			$('.show').mouseleave(function(){
 				$('.show').removeClass('selected');
 				$('.menu-nav').addClass('hide');
 			}
